--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 :root{
     --dark-grey: #333333;
     --light-grey: #808080;
+    --light-text: #e5e5e5;
     --yellow: #FFB612;
     --red: #dc0a17;
     --green: #2FC022;
